app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: 'PoppinsLight';
  src: url('../public/fonts/Poppins/light.otf');
}

@font-face {
  font-family: 'AmsterdamSignatureRegular';
  src: url('../public/fonts/AmsterdamSignature/regular.ttf');
}

@font-face {
  font-family: 'AmedaRegular';
  src: url('../public/fonts/Ameda/regular.otf');
}

:root {
  --theme-color-fg: #0F172A;
  --theme-color-fg-light: #1E293B;
  --theme-color-bg: #B91C1C;
  --theme-color-bg-light: #DC2626;
}

html {
  scroll-behavior: smooth;
}

body {
  @apply
    text-[--theme-color-fg]
    bg-white;
}

main {
  @apply
    flex flex-col
    min-h-screen;
}

section {
  @apply
    flex 
    w-full min-h-screen
    overflow-hidden;
}

section:not(:first-child) {
  @apply
   pt-[6.25rem];
}

section:first-child {
  font-family: 'PoppinsLight', sans-serif;

  @apply
    text-white;
}

nav {
  font-family: 'PoppinsLight', sans-serif;
  
  @apply
    z-40
    top-0
    sticky flex
    items-center
    p-4
    bg-gradient-to-tl from-[--theme-color-bg] to-[--theme-color-bg-light]
    text-white;
}

nav ul {
  @apply
    flex w-full 
    justify-around;
}

nav ul li {
  @apply
    flex flex-col
    font-bold;
}

button:hover, input[type="submit"]:hover, a:hover {
  @apply
    brightness-125;
}

h1 {
  font-family: 'AmsterdamSignatureRegular', cursive, sans-serif;
  line-height: 0.75;

  @apply
    sm:text-[9rem] max-sm:text-8xl -mt-5; 
}

h2 {
  @apply
    sm:text-2xl max-sm:text-xl;
}

h3 {
  font-family: 'AmedaRegular', serif;

  @apply
    text-4xl;
}

@layer utilities {
  #countdown-timer p {
    font-family: Times New Roman, serif;
  }

  #bible-quote p {
    font-family: Times New Roman, serif;
  }

  #entourage-container .entourage-name,
  #sponsor-container .sponsor-name {
    font-family: Times New Roman, serif;
  }

  #entourage-container .entourage-role {
    font-family: 'PoppinsLight', sans-serif;
  }

  #phone-number {
    -moz-appearance: textfield;
  }
  #phone-number::-webkit-inner-spin-button {
    display: none;
  }
  #phone-number::-webkit-outer-spin-button,
  #phone-number::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
  }
}

